[tool.poetry]
name = "punchr"
version = "0.1.0"
description = "Analysis Scripts for the Punchr NAT Hole Punching Project"
authors = ["Dennis Trautwein <git@dtrautwein.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
matplotlib = "^3.5.3"
pandas = "^1.4.4"
psycopg2 = "^2.9.3"
numpy = "^1.23.2"
scipy = "^1.9.1"
seaborn = "^0.12.0"
geoip2 = "^4.6.0"
SQLAlchemy = "^1.4.41"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
